<resources>
    <string name="app_name">OK-SAFE</string>

    <!-- Login -->
    <string name="masuk">Masuk</string>
    <string name="_62">+62</string>
    <string name="hint_nomor_telepon">Nomor Telepon</string>

    <!-- Verifikasi -->
    <string name="masukan_kode_verifikasi">Masukan Kode Verifikasi</string>
    <string name="ubah_nomor_telepon">Ubah Nomor Telepon</string>
    <string name="hint_kode_verifikasi">Kode Verifikasi</string>
    <string name="desc_nomor_telepon">Kami telah mengirimkan pesan ke nomor</string>
    <string name="kirim_ulang_kode">Kirim Ulang Kode</string>

    <!-- Profil Pengguna -->
    <string name="profil">Profil Pengguna</string>
    <string name="desc_welcome">Selamat Datang! Silahkan lengkapi data anda.</string>
    <string name="hint_nama">Nama Lengkap</string>
    <string name="hint_no_id">No ID KTP/KTM/NISN dsb..</string>
    <string name="simpan">Simpan</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Main Activity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_main">Laporan Anda</string>
    <string name="kesan">Kesan</string>

    <!-- Menu Activity -->
    <string name="ubah_profil">Ubah Profil</string>
    <string name="reward">Penghargaan</string>
    <string name="peta_sebaran_laporan">Peta Sebaran Laporan</string>
    <string name="bantuan">Bantuan</string>
    <string name="tentang">Tentang</string>
    <string name="keluar">Keluar</string>
    <string name="pengembang">Pengembang</string>

    <!-- Add Laporan Activity -->
    <string name="komentar">komentar</string>
    <string name="title_tambah_laporan">Tambah Laporan</string>
    <string name="press_pin_lokasi">Tekan dan Pilih Lokasi Laporan</string>
    <string name="hint_desc_laporan">Masukan deskripsi laporan</string>
    <string name="desc_add_photo">Tambahkan foto (opsi):</string>
    <string name="title_komentar">Komentar</string>

    <!-- Add Comment Activity -->
    <string name="hint_form_komentar">Tulis komentar…</string>

    <!-- Reward Activity -->
    <string name="title_reward">Penghargaan</string>

    <!-- About Developer Activity -->
    <string name="desc_univ">Departemen Ilmu Komputer \nInstitute Pertanian Bogor</string>
    <string name="tim_jeruk">Tim Jeruk</string>
    <string name="syihab">MUHAMAD SYIHABUDIN G64164007</string>
    <string name="rya">RYA MEYVRISKA G64164008</string>
    <string name="mail">ISMAIL ADIMA G64164053</string>
    <string name="faisal">FAISAL MAHYA LUBIS G64164058</string>

    <!-- About Activity -->
    <string name="version">Versi</string>
    <string name="desc_timJeruk">Tim Jeruk \nRekayasa Perangkat Lunak</string>
    <string name="kirim_masukan">Kirim Masukan</string>
    <string name="desc_nomor_telepon_profile">Anda masuk dengan nomor telepon +62</string>
    <string name="hint_desc_judul">Masukan judul laporan</string>
</resources>
