<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_default_photo_circle"
            android:title="@string/ubah_profil"/>
        <item
            android:id="@+id/nav_reward"
            android:icon="@drawable/ic_reward"
            android:title="@string/reward"/>
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/peta_sebaran_laporan"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_bantuan"
            android:title="@string/bantuan"/>
        <item
            android:id="@+id/nav_tentang"
            android:icon="@drawable/ic_logo"
            android:title="@string/tentang"/>
        <item
            android:id="@+id/nav_developer"
            android:icon="@drawable/ic_developer"
            android:title="@string/pengembang"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/keluar"/>
    </group>

</menu>
