<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="id.jeruk.ok_safe.ui.AboutActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/depart"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:id="@+id/iv_jeruk"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="24dp"
            android:src="@drawable/ic_jeruk"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:text="@string/tim_jeruk"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorDivider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="2dp"
            android:text="@string/syihab"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="2dp"
            android:text="@string/rya"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="2dp"
            android:text="@string/mail"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="2dp"
            android:text="@string/faisal"
            android:textColor="@color/colorSecondaryText"
            android:textSize="18sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/depart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorGray"
        android:orientation="horizontal"
        android:paddingEnd="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingStart="8dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_ipb"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:text="@string/desc_univ"/>

    </LinearLayout>


</RelativeLayout>
